<resources>
    <string name="app_name">SHEMS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Tab Dashboad: General -->
    <string name="general_energy_title">General Energy Consumption</string>
    <string name="current_month_label">Current Month:</string>
    <string-array name="months">
        <item>March</item>
        <item>February</item>
        <item>January</item>
    </string-array>
    <string name="goal_label">Goal:</string>
    <string name="consumed_label">Consumed:</string>

    <!-- Tab List of Objects -->
    <string name="objects_title">Objects</string>
    <string name="choose_room_label">Room:</string>
    <string-array name="rooms">
        <item>All</item>
        <item>Kitchen</item>
        <item>Living Room</item>
        <item>TV Room</item>
        <item>Couple Bedroom</item>
        <item>Kids Bedroom</item>
        <item>Garage</item>
        <item>Bathroom</item>
    </string-array>

    <!-- Object Visualization Activity-->
    <string name="object_visualization_title">Object Visualization</string>
    <string name="title_activity_single_object_chart">SingleObjectChartActivity</string>

    <!-- General Chart Activity-->
    <string name="general_chart_title">General Consumption Chart</string>

    <!-- Objects Chart Activity-->
    <string name="objects_chart_title">Objects Consumption Chart</string>
    <string name="title_activity_object">ObjectActivity</string>

    <!-- Single Object Chart Activity-->
    <string name="single_obj_chart_title">Single Object Chart</string>
    <string name="current_obj_label">Current Object:</string>
    <string name="title_activity_register_object">RegisterObjectActivity</string>

    <!-- General Chart Activity-->
    <string name="register_title">Register a new Object</string>
    <string-array name="add_rooms">
        <item>Kitchen</item>
        <item>Living Room</item>
        <item>TV Room</item>
        <item>Couple Bedroom</item>
        <item>Kids Bedroom</item>
        <item>Garage</item>
        <item>Bathroom</item>
    </string-array>

</resources>
