<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/layoutGlobal">

    <TabHost
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tabHost"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@+id/tabGeneral"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:clickable="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/general_energy_title"
                        android:id="@+id/labelGeneral"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:textIsSelectable="false"
                        android:textColor="#4d4d4d"
                        android:textStyle="bold"
                        android:textSize="23sp"
                        android:enabled="true"
                        android:singleLine="false" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/current_month_label"
                            android:id="@+id/labelCurrentMonth"
                            android:textColor="#4d4d4d"
                            android:textSize="20sp"
                            android:paddingRight="10dp" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/spinnerMonth"
                            android:longClickable="true" />

                    </LinearLayout>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableRow
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:paddingTop="25dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/goal_label"
                                android:id="@+id/labelGoal"
                                android:paddingRight="10dp"
                                android:textColor="#4d4d4d"
                                android:textStyle="bold"
                                android:textSize="20sp" />
                            /
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="100"
                                android:id="@+id/textGoal"
                                android:layout_column="1"
                                android:textColor="#4d4d4d"
                                android:textSize="20sp"
                                android:paddingRight="10dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="kWh"
                                android:id="@+id/textView"
                                android:textColor="#4d4d4d"
                                android:textSize="20sp" />

                        </TableRow>

                    </TableLayout>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableRow
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:paddingTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/consumed_label"
                                android:id="@+id/labelConsumed"
                                android:paddingRight="10dp"
                                android:textColor="#4d4d4d"
                                android:textStyle="bold"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="84"
                                android:id="@+id/textConsumed"
                                android:layout_column="1"
                                android:textColor="#4d4d4d"
                                android:textSize="20sp"
                                android:paddingRight="10sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="kWh"
                                android:id="@+id/textView2"
                                android:textColor="#4d4d4d"
                                android:textSize="20sp" />

                        </TableRow>

                    </TableLayout>

                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ratingBar"
                        android:longClickable="false"
                        android:layout_marginTop="25dp"
                        android:rating="4"
                        android:layout_gravity="center_horizontal"
                        android:clickable="false"
                        android:isIndicator="true" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:showDividers="middle"
                        android:layout_marginTop="20dp">

                        <ImageButton
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:id="@+id/buttonGeneralChart"
                            android:scaleType="fitXY"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/linechart" />

                        <ImageButton
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:id="@+id/buttonObjectsChart"
                            android:src="@drawable/piechart"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabObjects"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/choose_room_label"
                            android:id="@+id/labelChooseRoom"
                            android:layout_marginRight="15dp"
                            android:textColor="#4d4d4d"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/spinnerRoom" />

                    </LinearLayout>

                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/listViewObj"
                        android:layout_marginTop="10dp" />
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
